Fixed overflow mistake

--- a/assets/css/common/header.css
+++ b/assets/css/common/header.css
@@ -20,11 +20,10 @@ header {
         margin-right: auto;
     }
 
-    button {
-        /* width: 1em; */
+    button:has(path) {
+        width: 1em;
 
         path {
-            /* stroke: var(--text); */
             stroke: black;
             stroke-width: 3em;
         }
@@ -52,8 +51,8 @@ header {
             }
         }
 
-        button {
-            /* margin: 1.35em 10vw 0 auto; */
+        button:has(path) {
+            margin: 1.35em 10vw 0 auto;
         }
 
         :is(summary, a) {
@@ -80,13 +79,13 @@ header {
             width: 1.8em;
         }
 
-        button {
-            /* width: 1.25em; */
+        button:has(path) {
+            width: 1.25em;
         }
 
         nav {
-            button {
-                /* margin: 1.65em 7.5vw 0 auto; */
+            button:has(path) {
+                margin: 1.65em 7.5vw 0 auto;
             }
         }
     }
@@ -143,6 +142,9 @@ header {
         /* li:has(button)::marker {
             content: "▶";
         } */
+         [popover]{
+            overflow: visible;
+         }
 
         li:has([popovertarget="a"]):hover ul {
             /* display: initial; */
